--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "@/setupTest.ts"]
+  "exclude": ["node_modules"]
 }
